[project]
name = "video-to-gif-service"
version = "0.1.0"
description = ""
authors = [
    {name = "Priyanshu Yashwant Deshmukh",email = "priyanshudeshmukh4@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "python-dotenv (>=1.1.1,<2.0.0)",
    "fastapi (>=0.115.14,<0.116.0)",
    "yt-dlp (>=2025.6.30,<2026.0.0)",
    "openai-whisper (>=20250625,<20250626)",
    "ffmpeg-python (>=0.2.0,<0.3.0)",
    "langgraph (>=0.5.0,<0.6.0)",
    "langchain (>=0.3.26,<0.4.0)"
]

[tool.poetry]
packages = [{include = "video_to_gif_service", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
